k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
       component: web
    spec:
      containers:
        - name: client
          image: romka04/romka04-complex-webapi:v2
          ports:
            - containerPort: 80
            - containerPort: 443
