k8s/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: romka04/romka04-complex-webapi
      ports:
        - containerPort: 3000
