k8s/client-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - name: http
      port: 3050
      targetPort: 80
      nodePort: 31515
    - name: https
      port: 3051
      targetPort: 443
      nodePort: 31516
  selector:
    component: web
