k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployment
  annotations:
    kubernetes.io/ingress.class: 'nginx'
#    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 80
      #- https:
      #  paths: /
      #  backend:
      #    serviceName: client-cluster-ip-service
      #    servicePort: '443'
